Agregando modificaciones a los tests