@@ -32,12 +32,13 @@ public class AlertService {
     public List<Account> verifyMultipleAccountsCashNotRelated(List<Transaction> transactions) {
 
         /* return a lista de cuentas que recibieron cash de otras cuentas > 2 */
-        return transactions.stream().map(Transaction::getDestinationAccount)
+        List<Account> listReturn = transactions.stream().map(Transaction::getDestinationAccount)
                 .distinct()
                 .filter(destinationAccount -> transactionService.getLast24HoursTransactions(transactions).stream()
                         .map(Transaction::getSourceAccount)
                         .distinct()
                         .count() > 2)
-                .collect(Collectors.toList());
+                .toList();
+        return listReturn.isEmpty() ? List.of() : listReturn;
     }
 }
